fix public profil label white space issue

--- a/frontend/src/css/PublicProfile.styl
+++ b/frontend/src/css/PublicProfile.styl
@@ -114,6 +114,10 @@
     position absolute
     top 0
 
+.DisplaySchemaPropertyString__label
+  white-space nowrap
+  margin-inline-end textSpacing
+
 [dir=ltr] .profile
   &__cover__changeBtn
     right pageSpacing
